# c2rust_gzip

./: .gitignore  README.md  compile_commands.json
c_dir/: Makefile  config.status  gzip  tags
c_dir/.deps/: bits.Po  deflate.Po  gzip.Po  inflate.Po  lzw.Po  trees.Po  unlzh.Po  unlzw.Po  unpack.Po  unzip.Po  util.Po  zip.Po
c_dir/autom4te.cache/: requests  traces.0
c_dir/doc/: Makefile
c_dir/lib/: Makefile  config.h
c_dir/lib/.deps/: chdir-long.Po  creat-safer.Po  fcntl.Po  fd-safer-flag.Po  fd-safer.Po  fseterr.Po  getprogname.Po  gettime.Po  localtime-buffer.Po  malloca.Po  open-safer.Po  openat-die.Po  openat-safer.Po  opendir-safer.Po  pipe-safer.Po  printf-parse.Po  save-cwd.Po  savedir.Po  statat.Po  strerror_r.Po  timespec.Po  unistd.Po  utimens.Po  yesno.Po  (+3 more)
c_dir/tests/: Makefile
examples/: README.md  dirname_lgpl.rs  trees.rs
rust_dir/: Cargo.toml  lib.rs  log.txt  new_log.txt
rust_dir/src/: bits.rs  deflate.rs  gzip.rs  inflate.rs  lzw.rs  trees.rs  unlzh.rs  unlzw.rs  unpack.rs  unzip.rs  util.rs  version.rs  zip.rs
rust_dir/src/lib/: asnprintf.rs  basename_lgpl.rs  chdir_long.rs  dirname_lgpl.rs  exitfail.rs  fclose.rs  fcntl.rs  fd_safer.rs  fd_safer_flag.rs  filenamecat_lgpl.rs  fprintf.rs  fseterr.rs  gettime.rs  malloca.rs  open_safer.rs  openat_proc.rs  openat_safer.rs  pipe_safer.rs  printf.rs  printf_args.rs  printf_frexpl.rs  printf_parse.rs  save_cwd.rs  savedir.rs  sig_handler.rs  stat_time.rs  statat.rs  strerror_r.rs  timespec.rs  utimens.rs  vasnprintf.rs  vfprintf.rs  xmalloc.rs  yesno.rs
rust_dir/src/lib/glthread/: lock.rs
(+2 files in other folders)
